--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
   cupertino_icons: ^1.0.8
   provider: ^6.0.5
   http: ^1.2.1
+  google_fonts: ^6.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.4
+  image: ^4.7.2
 
 flutter:
+  generate: true
   uses-material-design: true
 
 
